# pygenstrings

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pygenstrings/: cli.py  genstrings.py  parser.py
stubs/: chardet.pyi
tests/: conftest.py  test_cli.py
