[tool.poetry]
name = "pygenstrings"
version = "0.1.0"
description = ""
authors = ["Jonas Obrist <jonas.obrist@hde.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
chardet = "^3.0"

[tool.poetry.scripts]
pygenstrings = "pygenstrings.cli:main"


[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
