[tool.poetry]
name = "pygenstrings"
version = "19.5"
description = "Simplifies managing localization files for ObjC/Swift projects."
authors = ["Jonas Obrist <jonas.obrist@hde.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
chardet = "^3.0"
toml = "^0.10.0"

[tool.poetry.scripts]
pygenstrings = "pygenstrings.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
mypy = "^0.660.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
